# Computer-Graphics

./: .gitignore  README.md
MeshSub/: README.md
MeshSub/include/: Engine.hpp  GraphicalCore.hpp
MeshSub/include/glm/: mat2x2.hpp  mat2x3.hpp  mat3x2.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp
MeshSub/include/glm/detail/: _noise.hpp  _swizzle.hpp  func_common.hpp  func_common_simd.inl  func_exponential.hpp  func_exponential.inl  func_geometric.inl  func_integer.hpp  func_integer.inl  func_matrix.hpp  func_packing.inl  func_trigonometric.inl  precision.hpp  setup.hpp  type_float.hpp  type_gentype.hpp  type_gentype.inl  type_half.hpp  type_half.inl  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat3x2.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x3.inl  type_vec1.inl  type_vec4_simd.inl
MeshSub/include/glm/gtc/: color_space.hpp  constants.hpp  constants.inl  epsilon.hpp  epsilon.inl  integer.hpp  integer.inl  matrix_access.hpp  matrix_access.inl  matrix_inverse.hpp  noise.inl  random.inl  reciprocal.hpp  round.inl  type_aligned.hpp  type_ptr.inl
MeshSub/include/glm/gtx/: bit.inl  closest_point.inl  color_space.inl  color_space_YCoCg.hpp  color_space_YCoCg.inl  common.hpp  common.inl  compatibility.hpp  dual_quaternion.inl  extend.hpp  extend.inl  extended_min_max.hpp  extended_min_max.inl  fast_exponential.inl  fast_trigonometry.inl  float_notmalize.inl  handed_coordinate_space.inl  hash.hpp  integer.hpp  integer.inl  io.hpp  log_base.inl  (+20 more)
MeshSub/src/: Application.cpp  Engine.cpp  Geometry.cpp  GraphicalCore.cpp  main.cpp
MeshSubSimp/: CMakeLists.txt  README.md  notes
MeshSubSimp/include/: Application.hpp  Camera.hpp  Geometry.h  Mesh.hpp  SimpleMesh.h
MeshSubSimp/include/glm/: mat3x3.hpp
MeshSubSimp/include/glm/detail/: _vectorize.hpp  func_matrix.inl  func_packing_simd.inl  glm.cpp  type_mat2x4.hpp  type_vec1.hpp  type_vec2.inl  type_vec4.hpp  type_vec4.inl
MeshSubSimp/include/glm/gtc/: matrix_integer.hpp  matrix_inverse.inl  matrix_transform.hpp  noise.hpp  type_precision.hpp
MeshSubSimp/include/glm/gtx/: bit.hpp  compatibility.inl  euler_angles.hpp  fast_square_root.hpp  fast_square_root.inl  gradient_paint.hpp  matrix_interpolation.hpp  mixed_product.hpp  norm.hpp  perpendicular.hpp
MeshSubSimp/include/glm/simd/: platform.h
MeshSubSimp/src/: Camera.cpp  Mesh.cpp
PhysicalEngine/: README.md
PhysicalEngine/p5out/msvc/: UpgradeLog.XML  UpgradeLog.htm  physics.sln  physics.vcxproj  physics.vcxproj.filters
SnowStorm/: CMakeLists.txt  README.md
SnowStorm/glm/: fwd.hpp
SnowStorm/glm/detail/: func_geometric.hpp  func_matrix_simd.inl  func_vector_relational.inl  type_mat2x2.hpp  type_mat4x2.inl  type_vec.hpp
SnowStorm/glm/gtx/: component_wise.inl  gradient_paint.inl  matrix_decompose.inl  normalize_dot.hpp  optimum_pow.inl  orthonormalize.inl  perpendicular.inl  projection.hpp  raw_data.hpp  scalar_relational.inl  spline.hpp  std_based_type.hpp  type_aligned.hpp
SnowStorm/include/: Application.hpp  Engine.hpp  GraphicalCore.hpp  ParticleManager.hpp
SnowStorm/resources/: background.tga
SnowStorm/src/: Application.cpp  Engine.cpp  GraphicalCore.cpp  ParticleManager.cpp
StarsRotating/: CMakeLists.txt  README.md
StarsRotating/glm/: mat3x4.hpp
StarsRotating/glm/detail/: dummy.cpp  func_geometric_simd.inl  func_integer_simd.inl  type_int.hpp  type_mat.hpp  type_mat2x4.inl  type_mat3x2.inl  type_mat4x4.hpp  type_vec3.inl
StarsRotating/glm/gtc/: bitfield.hpp  color_space.inl  functions.inl  packing.hpp  quaternion.inl  quaternion_simd.inl  random.hpp
StarsRotating/glm/gtx/: dual_quaternion.hpp  hash.inl  intersect.hpp  intersect.inl  io.inl  matrix_cross_product.hpp  matrix_interpolation.inl  normal.inl  polar_coordinates.hpp  transform.inl  transform2.inl  vector_query.hpp
StarsRotating/glm/simd/: geometric.h
StarsRotating/include/: Application.hpp  GraphicalCore.hpp  StarEngine.hpp
StarsRotating/src/: Application.cpp  GraphicalCore.cpp  StarEngine.cpp
TerrainEngine/: CMakeLists.txt  README.md
TerrainEngine/glm/detail/: func_exponential_simd.inl  func_packing.hpp  type_mat4x4.inl  type_vec2.hpp
TerrainEngine/glm/gtc/: color_encoding.inl  functions.hpp  reciprocal.inl  round.hpp  ulp.inl  vec1.hpp
TerrainEngine/glm/gtx/: associated_min_max.hpp  associated_min_max.inl  color_space.hpp  component_wise.hpp  euler_angles.inl  fast_exponential.hpp  handed_coordinate_space.hpp  matrix_query.hpp  matrix_transform_2d.hpp  normal.hpp  normalize_dot.inl  polar_coordinates.inl  range.hpp  rotate_normalized_axis.hpp  string_cast.hpp
TerrainEngine/include/: Application.hpp  Camera.hpp  Engine.hpp  GraphicalCore.hpp  Skybox.hpp  Terrain.hpp  Water.hpp
TerrainEngine/src/: Application.cpp  Camera.cpp  Engine.cpp  GraphicalCore.cpp  Skybox.cpp  Terrain.cpp  Water.cpp
TheBezierSurface/: CMakeLists.txt  README.md
TheBezierSurface/glm/: mat2x4.hpp
TheBezierSurface/glm/detail/: func_common.inl  func_trigonometric.hpp  func_vector_relational.hpp  func_vector_relational_simd.inl  type_mat3x3.hpp  type_vec3.hpp
TheBezierSurface/glm/gtc/: bitfield.inl  matrix_transform.inl  packing.inl  quaternion.hpp  type_ptr.hpp  ulp.hpp
TheBezierSurface/glm/gtx/: closest_point.hpp  fast_trigonometry.hpp  log_base.hpp  matrix_cross_product.inl  matrix_major_storage.hpp  matrix_operation.inl  norm.inl  number_precision.hpp  quaternion.inl  rotate_normalized_axis.inl  scalar_relational.hpp  transform.hpp  vector_angle.hpp  wrap.inl
TheBezierSurface/include/: Application.hpp  Engine.hpp  GraphicalCore.hpp
TheBezierSurface/src/: Application.cpp  Engine.cpp  GraphicalCore.cpp
(+14 files in other folders)
